# plotbiomes_python

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  setup.cfg
src/plotbiomes/: __init__.py  data.py  geometry.py  mapping.py  plotting.py
src/plotbiomes/data/: LICENSE.plotbiomes  ricklefs_colors.csv  whittaker_biomes.csv
