[metadata]
name = plotbiomes-python
version = 0.1.0
description = Python plotting tools for Whittaker biome climate-space polygons.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Weijie Zhang
keywords = biome, whittaker, ecology, matplotlib, climate
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Visualization
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib>=3.6
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
plotbiomes =
    data/*.csv
    data/*.plotbiomes

[options.extras_require]
dataframe =
    pandas>=1.5
map =
    folium>=0.14
dev =
    pytest>=7
